<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="45dp" 
    android:background="@drawable/background">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/main_lecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:textColor="#000099"
                android:id="@+id/upload_lecture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text="@string/lecture_name" />

            <EditText
                android:id="@+id/upload_lecture_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/main_lecture"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/upload_host"
                android:textColor="#000099"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text="@string/host_name" />

            <EditText
                android:id="@+id/upload_host_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/main_host"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/upload_date"
                android:textColor="#000099"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text="@string/date" />

            <EditText
                android:id="@+id/upload_date_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:textSize="15dp" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/main_date"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:textColor="#000099"
                android:id="@+id/upload_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text="@string/address" />

            <EditText
                android:id="@+id/upload_address_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/main_address"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:textColor="#000099"
                android:id="@+id/upload_speaker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text="@string/speaker" />

            <EditText
                android:id="@+id/upload_speaker_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/main_speaker"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/upload_content"
                android:textColor="#000099"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text="@string/content" />

            <EditText
                android:id="@+id/upload_content_content"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" >

            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/upload_upload_btn"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/main_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_blue"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/upload_reset_btn"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/upload_upload_btn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_blue"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

</ScrollView>